<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Badum-Tish"</string>
    <string name="shake_me">"Shake me!"</string>
    <string name="menu_quit">"Quit"</string>
    <string name="menu_about">"About"</string>
    <string name="vibrate_off">"Vibrate off"</string>
    <string name="vibrate_on">"Vibrate on"</string>
    <string name="vibrate">"Vibrate"</string>
    <string name="shake_sensitivity">"Shake sensitivity"</string>
    <string name="menu_select_jokes">"Select jokes"</string>
    <string name="menu_send_in_joke">"Send in my joke"</string>
    <string name="menu_share_joke">"Share joke"</string>
    <string name="menu_preferences">"Preferences"</string>
    <string name="menu_achievements">"Achievements"</string>
    <string name="language">"Language"</string>
    <string name="english">"English"</string>
    <string name="german">"German"</string>
    <string name="adultness">"Adultness"</string>
    <string name="mature">"Mature"</string>
    <string name="safe">"Safe"</string>
    <string name="joke_category">"Joke categories"</string>
    <string name="select_category">"Select a category!"</string>
    <string name="no_joke_found">"No joke found!"</string>
    <string name="email_subject">"Have you heard the one about…"</string>
    <string name="no_email_clients_installed">"No email clients installed!"</string>
    <string name="send_email">"Send mail"</string>
    <string name="email_recipient">"badumtishjokes@gmail.com"</string>
    <string name="points_abbr">"pts."</string>
    <string name ="worlds_funniest_joke_content">"A couple of hunters are out in the woods when one of them falls to the ground. He doesn't seem to be breathing, his eyes are rolled back in his head. The other guy whips out his cell phone and calls the emergency services. He gasps to the operator: 'My friend is dead! What can I do?'&#10;&#10;The operator, in a calm soothing voice says: 'Just take it easy. I can help. First, let's make sure he's dead.' There is a silence, then a shot is heard.&#10;&#10;The guy's voice comes back on the line. He says: 'OK, now what?'"</string>
<string name ="laughter_onomatopoeia">"Bwahahaha!"</string>
    <!-- Achievement strings -->
    <string name="achievement_unlocked">"Achievement unlocked: "</string>
    <string name="ach_unknown_exp">"\?\?\?"</string>
    <string name="worlds_funniest_joke">"World's funniest joke"</string>
    <string name="best_joke_not_available">"I'll show you the joke when you have 100%"</string>
    <string name="MENU_name">"The menu, please!"</string>
    <string name="QUIT_name">"Fun's over…"</string>
    <string name="FIRST_SHAKE_name">"Like a polaroid" </string>
    <string name="SEEN_5_JOKES_name">"Joke amateur" </string>
    <string name="SEEN_15_JOKES_name">"Joke apprentice" </string>
    <string name="SEEN_30_JOKES_name">"Joke connoisseur" </string>
    <string name="SEEN_60_JOKES_name">"Joke master" </string>
    <string name="HIGHEST_SENS_name">"Weakling" </string>
    <string name="STILL_30_SECS_name">"Steady hand" </string>
    <string name="SHARED_1_name">"First share" </string>
    <string name="SHARED_5_name">"Spread the word!" </string>
    <string name="SHARED_15_name">"Eager sharer" </string>
    <string name="SHARED_30_name">"Bigtime sharer" </string>
    <string name="SHARED_50_name">"Royal sharer" </string>
    <string name="CONTR_1_name">"Thanks!" </string>
    <string name="CONTR_5_name">"Junior contributor" </string>
    <string name="CONTR_15_name">"Advanced contributor" </string>
    <string name="CONTR_30_name">"Tireless contributor" </string>
    <string name="CONTR_50_name">"Grand contributor" </string>
    <string name="VIBS_20_name">"Good vibrations" </string>
    <string name="MENU_desc">"Discovered the menu" </string>
    <string name="QUIT_desc">"Quit the app for the first time" </string>
    <string name="FIRST_SHAKE_desc">"Shook the first time" </string>
    <string name="SEEN_5_JOKES_desc">"Seen five jokes" </string>
    <string name="SEEN_15_JOKES_desc">"Seen 15 jokes" </string>
    <string name="SEEN_30_JOKES_desc">"Seen 30 jokes" </string>
    <string name="SEEN_60_JOKES_desc">"Seen 60 jokes" </string>
    <string name="HIGHEST_SENS_desc">"Shake on highest sensitivity" </string>
    <string name="STILL_30_SECS_desc">"Didn't shake phone on highest sens. for 30 seconds" </string>
    <string name="SHARED_1_desc">"Shared one joke" </string>
    <string name="SHARED_5_desc">"Shared five jokes" </string>
    <string name="SHARED_15_desc">"Shared 15 jokes" </string>
    <string name="SHARED_30_desc">"Shared 30 jokes" </string>
    <string name="SHARED_50_desc">"Shared 50 jokes" </string>
    <string name="CONTR_1_desc">"Contributed one joke" </string>
    <string name="CONTR_5_desc">"Sent in five jokes" </string>
    <string name="CONTR_15_desc">"Sent in 15 jokes" </string>
    <string name="CONTR_30_desc">"Sent in 30 jokes" </string>
    <string name="CONTR_50_desc">"Sent in 50 jokes" </string>
    <string name="VIBS_20desc">"20 shakes with vibration on" </string>

</resources>