<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_select_jokes"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_select_jokes">
    </item>
    <item
        android:id="@+id/menu_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_preferences">
    </item>
    <item
        android:id="@+id/menu_achievements"
        android:icon="@drawable/ic_menu_star"
        android:title="@string/menu_achievements">
    </item>
    <item
        android:id="@+id/menu_share_joke"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share_joke">
    </item>
    <item
        android:id="@+id/menu_send_in_joke"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/menu_send_in_joke">
    </item>

</menu><!--
        <item android:id="@+id/menu_about" android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/menu_about"></item>
-->
